methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:1: error: Missing closing brace `}' assumed here
override def run() {
^PatternPicture:1: error: expected start of definition
override def run() {
         ^PatternPicture:4: error: expected class or object definition
def faireMoRV():
^PatternPicture:8: error: expected class or object definition
def marquerSol(){
^