methods.picture.PatternPicture.scala.code
override def run() {
}

def faireMoRV():
	avance()


def marquerSol(){
	baisseBrosse()
	leveBrosse()